--- a/README
+++ b/README
@@ -1,4 +1,19 @@
-RECIPES
+Myapp
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
 ["apps4", "controllers", "core", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
-PREFERENCES
-{:git=>true, :apps4=>"none", :dev_webserver=>"thin", :prod_webserver=>"unicorn", :database=>"sqlite", :templates=>"haml", :unit_test=>"rspec", :integration=>"rspec-capybara", :continuous_testing=>"none", :fixtures=>"factory_girl", :frontend=>"foundation", :email=>"sendgrid", :authentication=>"devise", :devise_modules=>"confirmable", :authorization=>"none", :form_builder=>"none", :starter_app=>"none", :local_env_file=>true, :better_errors=>true, :ban_spiders=>true, :github=>true}
+
+Preferences:
+{:git=>true, :apps4=>"none", :dev_webserver=>"thin", :prod_webserver=>"unicorn", :database=>"sqlite", :templates=>"haml", :unit_test=>"rspec", :integration=>"rspec-capybara", :continuous_testing=>"none", :fixtures=>"factory_girl", :frontend=>"foundation", :email=>"sendgrid", :authentication=>"devise", :devise_modules=>"confirmable", :authorization=>"none", :form_builder=>"none", :starter_app=>"none", :local_env_file=>true, :better_errors=>true, :ban_spiders=>true, :github=>true, :rvmrc=>true}
+
+________________________
+
+License
